# windows-forensic-agent

./: .gitignore  Cargo.toml  README-GITHUB.md  README.md  SPRINT2-REPORT.md  demo_sprint2.ps1
.github/: copilot-instructions.md
full-reconnaissance/: reconnaissance.json
src/: main.rs  main_working.rs  types.rs  utils.rs
src/collectors/: browsers.rs  certificates.rs  crypto_theft.rs  events.rs  files.rs  mod.rs  network.rs  processes.rs  processes_winapi.rs  processes_winapi_backup.rs  registry.rs  registry_winapi.rs  registry_winapi_backup.rs  services.rs  services_winapi.rs  services_winapi_backup.rs  tasks.rs  wmi_subs.rs
src/detect/: engine.rs  rules.rs
src/output/: mod.rs
test-run/: reconnaissance.json
