[package]
name = "forensic-agent"
version = "0.1.0"
edition = "2021"
authors = ["Forensic Agent"]
description = "Windows forensic agent for system reconnaissance and threat detection"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# String processing
regex = "1.10"

# Pattern matching
glob = "0.3"

# Parallel processing
rayon = "1.8"

# Hashing
sha2 = "0.10"
hex = "0.4"

# File system traversal
walkdir = "2.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Windows API
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Services", 
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_Security_Cryptography",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem"
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
